# Engine-821

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-external.sh  build.bat  main.cpp
libraries/fmt/lib/release/: fmt.lib
libraries/sdl2/lib/debug/: SDL2.lib
src/: Main.cpp  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  IRenderer.hpp  Makefile  Renderer.cpp  Renderer.hpp  cmake_install.cmake  engine.cpp  engine.h  events.h  window.cpp  window.h
src/engine/common/: Circle.hpp  Types.hpp
src/engine/core/: Logger.hpp
src/game/: Makefile  cmake_install.cmake
